--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 </div>
 <div id="about-content" class="container pb-5">
 	<h2 class="title pb-3">The <br>story so far...</h2>
-<div class="row row-eq-height h-100">
+<div class="row">
 	<div class="col-md-4 col-sm-12 card-mission">
   <h3 class="mission">Mission</h3>
 	Starting from a blank canvas is the absolute hardest thing to do. It’s insanely hard. And yet the brave entrepreneurs in the tech industry do it, time and time again, and every year, a few are successful. It’s an awesome thing when it works though. My mission is to find & help projects that need help with their zero to one journeys.
