--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 	    </div>
 	  </div>
 	</div>
-	<div class="container-fluid">
+	<div class="container-fluid worked-with">
 		<div class="greetings pb-3">Worked with</div>
 			<div class="d-flex justify-content-between past-clients">
 			<img src="assets/img/logos/wall.png" height="16px">
@@ -107,7 +107,7 @@
             <div class="quote">"</div>Curious, imaginative, hardworking - these are the top three words that come to my mind when I think of Divya. With a strong drive to deliver quality work and a bias towards minimalism, Divya has consistently delivered great work, be it in designing great UI/UX or in creating product solutions that have the power to ease business processes. I believe what sets Divya apart is his uncompromising nature that gets into the nitty-gritties of the how, what and why of every product element in order to deliver something that is best optimized for the given use-case.
           </p>
           <div class="review-data">
-            <!-- <img src="assets/img/rahul.png" class="review-dp"> -->
+            <img src="assets/img/rahul.png" class="review-dp">
             <h3 class="title">Rahul Menon</h3>
             <div class="position">Product Marketing Manager <span class="at">at</span> Brilyant IT Solutions PVT LTD</div>
           </div>
@@ -117,7 +117,7 @@
             <div class="quote">"</div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.
           </p>
           <div class="review-data">
-            <!-- <img src="assets/img/rahul.png" class="review-dp"> -->
+            <img src="assets/img/rahul.png" class="review-dp">
             <h3 class="title">Varun Bhalla</h3>
             <div class="position">Product Marketing Manager <span class="at">at</span> Brilyant IT Solutions PVT LTD</div>
           </div>
@@ -127,7 +127,7 @@
             <div class="quote">"</div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.
           </p>
           <div class="review-data">
-            <!-- <img src="assets/img/rahul.png" class="review-dp"> -->
+            <img src="assets/img/rahul.png" class="review-dp">
             <h3 class="title">Rahul Menon</h3>
             <div class="position">Product Marketing Manager <span class="at">at</span> Brilyant IT Solutions PVT LTD</div>
           </div>
