--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 	     </h1>
 	     <p>With more than 10+ years of experience in crafting digital products and I remain committed to assisting founders in bringing their ideas to life. From product strategy and user experience design to development, I am here to support you throughout the entire process. Together, we can create a functional and aesthetically pleasing product that also delivers a positive impact.</p>
 	     <a href="https://calendly.com/d/z5b-3s8-4hk/discovery-call" target="_blank"><button type="button" class="btn btn-main">Discovery call</button></a>
-	     <!-- <span class="or-text">or</span> -->
-<!-- 	     <a href="https://adplist.org/mentors/divya-ranjan" target="_blank">
-      <button type="button" class="btn btn-main btn-bordered">Get mentorship</button>
-      </a> -->
+	     <span class="or-text">or</span>
+       <a href="mailto:divya.ranjn+discovery@gmail.com" target="_blank">
+      <button type="button" class="btn btn-main btn-bordered">Write to me</button>
+      </a>
 		 </div>
 	    </div>
 	    <div class="col-md-6 col-sm-12">
@@ -135,8 +135,10 @@
 <h2 class="title no-line">Are you a part of an early stage startup building interesting <br>things for Web3?</h2>
 <p>I’d love to talk!</p>
        <a href="https://calendly.com/d/z5b-3s8-4hk/discovery-call" target="_blank"><button type="button" class="btn btn-main">Discovery call</button></a>
-       <!-- <span class="or-text">or</span> -->
-       <!-- <a href="https://adplist.org/mentors/divya-ranjan" target="_blank"><button type="button" class="btn btn-main btn-bordered">Get mentorship</button></a> -->
+       <span class="or-text">or</span>
+       <a href="mailto:divya.ranjn+discovery@gmail.com" target="_blank">
+        <button type="button" class="btn btn-main btn-bordered">Write to me</button>
+        </a>
 </div>
 <footer>Crafted with <span class="red"><3</span> and a lot of freshly brewed coffee</footer>
   	<script type="text/javascript" src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
