--- a/index.html
+++ b/index.html
@@ -13,13 +13,12 @@
   <link rel="stylesheet" href="assets/css/style.css">
 
   <!-- Favicon -->
-  <meta property="og:description" content="HEY 👋🏻, I’M DIVYA">
+  <meta property="og:description" content="Hey, I’m Divya">
 
   <!-- Twitter Cards meta tags -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Divya Ranjan">
-  <meta name="twitter:description" content="HEY 👋🏻, I’M DIVYA">
-  <meta name="twitter:image" content="https://www.example.com/assets/img/social.jpg">
+  <meta name="twitter:description" content="Hey, I’m Divya">
 
 </head>
 
@@ -104,7 +103,7 @@
 		<p><span class="large-text">I</span> love building products that add value to the lives of a lot of people! My catalyst into product building was in 2011 when I decided to follow my passion for design and entrepreneurship and co-founded Darnster, an online social platform that enables people to share with others anonymously. The accelerated growth and learnings that come from running a startup are lessons and experience I still leverage to this day.</p>
 		<p>Since then, I've had the unique opportunity to be exposed to and work with a variety of global brands in the consumer industry, as well as the finance and blockchain.</p>
 		<p>My skill sets are diverse, which allows the flexibility to work across many levels of an organization, from leadership teams to tactical product teams to create meaningful solutions. I believe in remaining perpetually curious, and love big challenges and excel under ambiguous conditions. Of all the things I value most, it's working with great people while making really cool stuff.</p>
-		</p>I'm always open to connecting with interesting people from around the globe, so feel free to reach out and say hello.</p>
+		</p>I'm always open to connecting with interesting people from around the globe, so feel free to reach out and <a href="mailto:divya.ranjn+reach@gmail.com" class="underline-link">say hello</a>.</p>
 	</div>
 </div>
 </div>
@@ -121,7 +120,7 @@
           <div class="review-data">
             <img src="assets/img/rahul.png" class="review-dp">
             <h3 class="title">Rahul Menon</h3>
-            <div class="position">Product Marketing Manager <span class="at">at</span> Brilyant IT Solutions PVT LTD</div>
+            <div class="position">Product Marketing Manager <span class="at">at</span> <span class="company-name">Brilyant IT Solutions PVT LTD</span></div>
           </div>
         </div>
       </div>
@@ -129,7 +128,6 @@
   </div>
 </div>
 
-</div>
 
 <div id="get-in-touch" class="container pb-5">
 <h2 class="title no-line">Are you a part of an early stage startup building interesting <br>things for Web3?</h2>
@@ -145,19 +143,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js"></script>
-	 <script>
-	AOS.init();
-	$(document).ready(function(){
-	    $("#testimonial-slider").owlCarousel({
-	        items:1,
-	        itemsDesktop:[1000,1],
-	        itemsDesktopSmall:[979,1],
-	        itemsTablet:[768,1],
-	        navigation:true,
-	        slideSpeed:5000,
-	        autoPlay:true
-	    });
-	});
-	</script>
+    <script type="text/javascript" src="assets/js/global.js"></script>
   </body>
 </html>
