--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="assets/css/style.css">
 
   <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="assets/img/fav.png">
   <meta property="og:description" content="Hey, I’m Divya">
 
   <!-- Twitter Cards meta tags -->
